docs/spec/grammar.ebnf
(* Quidra grammar. The release version is owned by project.toml.
   INDENT/DEDENT use four spaces per level.
   Bracketed newlines are insignificant. String backslashes are literal;
   physical CRLF inside a string literal is normalized to LF, so checkout
   line-ending style does not change string data. Control characters use
   NL, HT, CR, DQ, BS, FF, VT, and BL. *)

program          = { NEWLINE | import_decl | extern_decl | export_decl | cli_decl | enum_decl | class_decl | function_decl | main_guard | statement }, EOF ;

import_decl      = [ "public" ], "import", identifier,
                   [ "=", ( string | identifier ) ], statement_end ;

extern_decl      = "extern", type, identifier, "(", [ parameters ], ")",
                   "=", string, statement_end ;

export_decl      = "export", string, function_decl ;

cli_decl         = "cli", identifier, NEWLINE, INDENT,
                   cli_field, { cli_field | NEWLINE }, DEDENT ;
cli_field        = type, identifier, "=", cli_source, statement_end ;
cli_source       = "argument", "(", [ "default", "=", expression ], ")"
                 | "option", "(", "default", "=", expression, ")"
                 | "flag", "(", ")" ;

enum_decl        = "enum", identifier, NEWLINE, INDENT,
                   enum_variant, { enum_variant | NEWLINE }, DEDENT ;
enum_variant     = identifier, [ "(", type, ")" ], statement_end ;

class_decl       = class_prototype | class_definition ;
qualified_identifier = identifier, { ".", identifier } ;
class_prototype  = "class", qualified_identifier, [ type_parameters ], ";", statement_end ;
class_definition = "class", qualified_identifier, [ type_parameters ], NEWLINE, INDENT,
                   class_member, { class_member | NEWLINE }, DEDENT ;
class_member     = [ "private" ], ( field | constructor | function_definition ) ;
constructor      = [ type, "|", "error" ], "construct", [ type_parameters ],
                   "(", [ parameters ], ")", suite ;
field            = [ "const" ], type, identifier, [ "=", expression ], statement_end ;

function_decl    = function_prototype | function_definition ;
function_prototype = function_signature, ";", statement_end ;
function_definition = function_signature, suite ;
function_signature = type, identifier, [ type_parameters ],
                   "(", [ parameters ], ")" ;
type_parameters  = "<", type_parameter, { ",", type_parameter }, ">" ;
type_parameter   = identifier, [ ":", generic_constraint ] ;
generic_constraint = "numeric" | "integer" | "floating" | "ordered" | "equatable" ;
parameters       = parameter, { ",", parameter }, [ "," ] ;
parameter        = [ "const" ], type, [ "&" ], identifier, [ "=", expression ] ;

type             = array_type, { "|", array_type } ;
array_type       = type_atom, { "[", [ integer_expression ], "]" } ;
type_atom        = function_type | tensor_type | qualified_identifier, [ type_arguments ] ;
function_type    = "fn", "<", type, ">", "(", [ type, { ",", type } ], ")" ;
tensor_type      = "tensor", "<", type, ">", [ shape_pattern ] ;
shape_pattern    = "<", shape_axis, { ",", shape_axis }, ">" ;
shape_axis       = integer_expression | "_" ;
integer_expression = integer_term, { ( "+" | "-" ), integer_term } ;
integer_term     = integer_factor, { ( "*" | "/" | "%" ), integer_factor } ;
integer_factor   = ( "+" | "-" ), integer_factor
                 | integer_literal | identifier | this_field | "(", integer_expression, ")" ;
type_arguments   = "<", type, { ",", type }, ">" ;

suite            = NEWLINE, INDENT, statement, { statement | NEWLINE }, DEDENT ;
main_guard       = "if", "main", suite ;
statement        = binding | assignment | address_assignment | return_stmt |
                   loop_control_stmt | if_stmt | while_stmt | for_stmt | match_stmt | expr_stmt ;
binding          = [ "const" ], type, [ "&" ], identifier,
                   [ "=", [ "&" ], expression ], statement_end ;
assignment       = assignable, assignment_operator, expression, statement_end ;
assignment_operator = "=" | "+=" | "-=" | "*=" | "/=" | "%=" ;
address_assignment = "&", identifier, "=", "&", expression, statement_end ;
assignable       = postfix ;
return_stmt      = "return", [ expression ], statement_end ;
loop_control_stmt = ( "break" | "continue" ), statement_end ;
if_stmt          = "if", or_expr, suite,
                   { "elif", or_expr, suite }, [ "else", suite ] ;
while_stmt       = "while", or_expr, suite ;
for_stmt         = "for", [ "&" ], identifier, "in", or_expr, suite ;
match_stmt       = "match", or_expr, NEWLINE, INDENT,
                   match_case, { match_case | NEWLINE }, DEDENT ;
match_case       = type, [ identifier | "(", identifier, ")" ], suite ;
expr_stmt        = expression, statement_end ;

expression       = if_expr | or_expr ;
if_expr          = "if", or_expr, "then", or_expr,
                   { "elif", or_expr, "then", or_expr }, "else", or_expr ;
or_expr          = and_expr, { "or", and_expr } ;
and_expr         = equality, { "and", equality } ;
equality         = comparison, { ( "==" | "!=" ), comparison } ;
comparison       = bit_or_expr, { ( "<" | "<=" | ">" | ">=" ), bit_or_expr } ;
bit_or_expr      = bit_xor_expr, { "OR", bit_xor_expr } ;
bit_xor_expr     = bit_and_expr, { "XOR", bit_and_expr } ;
bit_and_expr     = shift_expr, { "AND", shift_expr } ;
shift_expr       = term, { ( "<<" | ">>" ), term } ;
term             = factor, { ( "+" | "-" ), factor } ;
factor           = unary, { ( "*" | "/" | "%" ), unary } ;
unary            = ( "try" | "not" | "NOT" | "-" | "&" ), unary | power ;
power            = postfix, [ "^", unary ] ;
postfix          = primary, { generic_call | direct_call | index_suffix | member_suffix } ;
generic_call     = type_arguments, "(", [ arguments ], ")" ;
direct_call      = "(", [ arguments ], ")" ;
index_suffix     = "[", index_item, { ",", index_item }, "]" ;
index_item       = expression
                 | [ expression ], ":", [ expression ], [ ":", [ expression ] ] ;
member_suffix    = ".", identifier, [ type_arguments ],
                   [ "(", [ arguments ], ")" ] ;
primary          = integer_literal | real_literal | imaginary_literal | string |
                   "true" | "false" | "void" | "none" |
                   array | identifier | this_field | "(", expression, ")" ;
this_field       = "this", ".", identifier ;
                   (* never followed directly by "(" or a type-argument call *)
array            = "[", [ expression, { ",", expression }, [ "," ] ], "]" ;
arguments        = argument, { ",", argument }, [ "," ] ;
argument         = "&", identifier, "=", "&", expression
                 | identifier, "=", expression
                 | [ "&" ], expression ;
statement_end    = NEWLINE | EOF ;

(* Numeric lexical constraints:
   - integer literals are decimal digits only; 0x/0b/0o prefixes do not exist;
   - real literals contain a decimal point; exponent notation only after it (1.0e8);
   - an imaginary literal is a real literal immediately followed by `i` that is not
     followed by an identifier character (2.0i, 1.0e-3i); `i` is not reserved, so
     `int i = 5` stays valid; `2i` is lexed as an integer-form imaginary literal
     and rejected by the checker;
   - literals carry categories, not types: non-negative integer, negative integer
     (unary `-` applied to an integer literal), real, imaginary, and complex (a real
     and an imaginary literal joined by + or -); each materializes only into the
     types of its category;
   - in a nat or int context an integer literal has no width ceiling; fixed-width
     contexts keep their ranges; a real literal rounds correctly to realN and is
     exact for real;
   - AND, OR, XOR, NOT, <<, >> apply only to nat8..nat64 and int8..int64.
     Lowercase and/or/not remain bool-only logical operators. *)

(* Static/frontend constraints:
   - import is top-level only; imported modules contain declarations and may contain
     top-level if main guards, whose bodies are checked but inactive when imported;
     other executable top-level statements are root-only;
   - top-level function/class names are downward-visible unless introduced earlier by
     a same-file prototype; ';' is reserved for those prototypes, which require one
     matching later definition; methods and enums do not have prototype forms;
   - standard namespaces are always visible and cannot be imported;
   - unquoted non-standard import targets name installed packages; quoted ./ and ../
     imports are importer-relative and quoted @/ imports are command-working-directory-relative;
   - import cycles and alias collisions are invalid;
   - cli_decl is root-only, occurs at most once, and its fields use
     argument(), trailing argument(default = value), option(default = value), or flag();
     required positional argument() fields must precede optional positional fields;
   - `tensor<T><D0, D1, ...>` uses a mandatory fixed-width native numeric element type plus an
     optional exact-rank shape pattern; each shape axis is `_` or an integer
     expression, and the number of axes is the required rank. Integer expressions
     that are not compile-time constants are evaluated once when the binding is
     created and their nonnegative results are captured for that binding;
   - array dimensions use the same integer-expression rule. `[]` remains a
     runtime-sized dimension, while `[expr]` captures expr once for the binding;
   - generic classes require explicit type arguments in type positions; a
     construction call may omit them when the constructor's arguments uniquely
     determine every class type parameter; generic function/method
     type arguments may be omitted when every generic parameter is uniquely inferred
     from call arguments; all concrete uses are monomorphized before ordinary static checking;
   - `fn<R>(P...)` is a capture-free function-value type. Converting a declared
     function to it requires the complete explicit function-value context and an exact
     by-value signature; extern functions, reference-parameter functions, and bound
     methods do not implicitly become function values;
   - `T(...)` is a constructor call of class T: a class has at most one `construct`
     member, and alternative call forms use that constructor's default parameters rather
     than overload resolution. `construct(...)` names no type; a fallible one is spelled
     `T | error construct(...)`. A class-typed declaration without an initializer creates
     the value with its field defaults; fields may remain uninitialized until assigned;
   - in an initialized local binding, bare `auto` infers the non-`error` success side and
     fails fast if the initializer produces `error`; `auto | error` is the only union form
     containing `auto` and explicitly retains that failure channel. Forms such as
     `error | auto` and `auto | none` are invalid;
   - class members are public by default. private is a class-member-only prefix, valid on
     constructors too; private access is restricted to methods declared by the owning class;
   - a string literal placeholder `{&storage}` is an input target and is valid only as
     the format of scan(...); print, flush and scan return void | error, and an
     expression statement whose value can be error fails fast on error;
   - `public import` re-exports the imported alias as a nested namespace of the module;
   - inside method and constructor bodies a field of the receiver is written
     `this.name`; a bare name never denotes a field. `this` is only a field
     qualifier: it is not a value, cannot be passed, addressed, assigned,
     compared or indexed, and does not call methods; it is a keyword;
   - `_` is the discard name, not a reserved word: it is never declared (as a binding,
     parameter, field, function, method, class, enum, variant, type parameter, match
     binder, loop name or import alias) and never read; in a tensor shape pattern it is
     an axis of any extent;
   - identifiers that begin with `__quidra_` are reserved for the compiler and are never
     declared;
   - `export` is contextual: it begins an export_decl only at top level and only when a
     string literal follows it; elsewhere it is an ordinary identifier. The string is
     "C". An export_decl prefixes a non-generic free function, never a method,
     constructor or class member, and is not valid inside a block. When an exported
     function has a prototype, the prototype and the definition both carry the prefix;
   - an if-expression's condition and branches are or_expr: an if-expression nested there,
     or used as an operand, is parenthesized, and a branch extends as far as an or_expr, so
     `if c then 2 else 3 + 1` is `if c then 2 else (3 + 1)`; `else` is mandatory and
     `else if` is written `elif`; a statement that begins with `if` is an if_stmt (or the
     `if main` guard), never an expression statement; statement headers are or_expr, so an
     if-expression there is parenthesized; outside brackets an if-expression ends with its
     line; it gives a value, never a reference (no `&` before it, no reference binding to it,
     no address as a branch); `then` is reserved;
   - safe address targets, exhaustive cases, field-level initialization, fixed shapes,
     argument ordering, value equality, and
     no-shadowing are checked statically.
   '&' forms safe storage addresses. print may observe the current raw machine
     address, and ==/!= may compare address identity; addresses are otherwise non-storable
     and do not support conversion, arithmetic, ordering, or dereference;
   - const removes write authority through that binding/reference path. const value
     bindings require initialization; const references require initialized stable storage
     and cannot be rebound or promoted back to writable references. *)
