src/parser.cpp
#include "quidra/parser.hpp"
#include "quidra/language.hpp"
#include "quidra/lexer.hpp"
#include <algorithm>
#include <charconv>
#include <cctype>
#include <cstdlib>
#include <functional>
#include <limits>
#include <string_view>
#include <system_error>

namespace quidra {
namespace {
class ParseDepthGuard {
public:
    ParseDepthGuard(std::size_t& depth, std::size_t limit, const Token& token, const char* what)
        : depth_(depth) {
        ++depth_;
        if (depth_ > limit) {
            --depth_;
            throw CompileError(Diagnostic{"PARSE_DEPTH", std::string(what) + " nesting exceeds the parser limit.", token.span});
        }
    }
    ~ParseDepthGuard() { --depth_; }
private:
    std::size_t& depth_;
};

SourcePos relocated_position(const SourcePos& local, const SourcePos& base) {
    SourcePos result;
    result.offset = base.offset + local.offset;
    result.line = base.line + local.line - 1;
    result.column = local.line == 1 ? base.column + local.column - 1 : local.column;
    return result;
}

void relocate_span(SourceSpan& span, const SourcePos& base) {
    span.start = relocated_position(span.start, base);
    span.end = relocated_position(span.end, base);
}

bool scan_type_lookahead(const std::vector<Token>& tokens, std::size_t& index,
                         std::size_t depth, std::size_t limit) {
    if (tokens.empty()) return false;
    if (depth > limit) {
        const auto& token = tokens[std::min(index, tokens.size() - 1)];
        throw CompileError(Diagnostic{
            "PARSE_DEPTH",
            "Type nesting exceeds the parser limit.",
            token.span});
    }
    if (index >= tokens.size() || tokens[index].kind != TokenKind::Identifier) return false;
    const auto root_name = tokens[index++].text;
    bool qualified = false;
    while (index < tokens.size() && tokens[index].kind == TokenKind::Dot) {
        qualified = true;
        ++index;
        if (index >= tokens.size() || tokens[index++].kind != TokenKind::Identifier) return false;
    }

    const auto scan_integer_expr = [&](TokenKind end_a, TokenKind end_b) -> bool {
        std::size_t parens = 0;
        bool expect_operand = true;
        bool any = false;
        while (index < tokens.size()) {
            const auto kind = tokens[index].kind;
            if (parens == 0 && (kind == end_a || kind == end_b)) break;
            if (expect_operand) {
                if (kind == TokenKind::Plus || kind == TokenKind::Minus) {
                    ++index;
                    continue;
                }
                if (kind == TokenKind::Integer || kind == TokenKind::Identifier) {
                    ++index;
                    any = true;
                    expect_operand = false;
                    continue;
                }
                // `this.NAME`: a receiver field in an extent expression.
                if (kind == TokenKind::KwThis && index + 2 < tokens.size() &&
                    tokens[index + 1].kind == TokenKind::Dot &&
                    tokens[index + 2].kind == TokenKind::Identifier) {
                    index += 3;
                    any = true;
                    expect_operand = false;
                    continue;
                }
                if (kind == TokenKind::LParen) {
                    ++parens;
                    ++index;
                    continue;
                }
                return false;
            }
            if (kind == TokenKind::Plus || kind == TokenKind::Minus ||
                kind == TokenKind::Star || kind == TokenKind::Slash ||
                kind == TokenKind::Percent) {
                ++index;
                expect_operand = true;
                continue;
            }
            if (kind == TokenKind::RParen && parens > 0) {
                --parens;
                ++index;
                continue;
            }
            return false;
        }
        return any && !expect_operand && parens == 0;
    };

    const auto scan_shape = [&]() -> bool {
        if (index >= tokens.size() || tokens[index].kind != TokenKind::Less) return false;
        ++index;
        bool any = false;
        while (true) {
            if (index >= tokens.size()) return false;
            const bool wildcard =
                tokens[index].kind == TokenKind::Identifier &&
                tokens[index].text == "_" &&
                index + 1 < tokens.size() &&
                (tokens[index + 1].kind == TokenKind::Comma ||
                 tokens[index + 1].kind == TokenKind::Greater);
            if (wildcard) {
                ++index;
            } else if (!scan_integer_expr(TokenKind::Comma, TokenKind::Greater)) {
                return false;
            }
            any = true;
            if (index < tokens.size() && tokens[index].kind == TokenKind::Comma) {
                ++index;
                continue;
            }
            break;
        }
        return any && index < tokens.size() && tokens[index++].kind == TokenKind::Greater;
    };

    if (index < tokens.size() && tokens[index].kind == TokenKind::Less) {
        if (!qualified && root_name == "fn") {
            ++index;
            if (!scan_type_lookahead(tokens, index, depth + 1, limit)) return false;
            if (index >= tokens.size() || tokens[index++].kind != TokenKind::Greater) return false;
            if (index >= tokens.size() || tokens[index++].kind != TokenKind::LParen) return false;
            if (index < tokens.size() && tokens[index].kind != TokenKind::RParen) {
                if (!scan_type_lookahead(tokens, index, depth + 1, limit)) return false;
                while (index < tokens.size() && tokens[index].kind == TokenKind::Comma) {
                    ++index;
                    if (!scan_type_lookahead(tokens, index, depth + 1, limit)) return false;
                }
            }
            if (index >= tokens.size() || tokens[index++].kind != TokenKind::RParen) return false;
        } else if (!qualified && root_name == "tensor") {
            ++index;
            if (!scan_type_lookahead(tokens, index, depth + 1, limit)) return false;
            if (index >= tokens.size() || tokens[index++].kind != TokenKind::Greater) return false;
            if (index < tokens.size() && tokens[index].kind == TokenKind::Less &&
                !scan_shape()) return false;
        } else {
            ++index;
            if (!scan_type_lookahead(tokens, index, depth + 1, limit)) return false;
            while (index < tokens.size() && tokens[index].kind == TokenKind::Comma) {
                ++index;
                if (!scan_type_lookahead(tokens, index, depth + 1, limit)) return false;
            }
            if (index >= tokens.size() || tokens[index++].kind != TokenKind::Greater) return false;
        }
    }
    while (index < tokens.size() && tokens[index].kind == TokenKind::LBracket) {
        ++index;
        if (index < tokens.size() && tokens[index].kind != TokenKind::RBracket) {
            if (!scan_integer_expr(TokenKind::RBracket, TokenKind::RBracket)) return false;
        }
        if (index >= tokens.size() || tokens[index++].kind != TokenKind::RBracket) return false;
    }
    if (index < tokens.size() && tokens[index].kind == TokenKind::Pipe) {
        ++index;
        return scan_type_lookahead(tokens, index, depth + 1, limit);
    }
    return true;
}

void relocate_expr(Expr& expression, const SourcePos& base);

void relocate_type(TypeName& type, const SourcePos& base) {
    relocate_span(type.span, base);
    for (auto& argument : type.arguments) relocate_type(argument, base);
    for (auto& expression : type.dimension_expressions) {
        if (expression) relocate_expr(*expression, base);
    }
    for (auto& expression : type.tensor_shape_expressions) {
        if (expression) relocate_expr(*expression, base);
    }
}

void relocate_arg(CallArg& argument, const SourcePos& base) {
    relocate_span(argument.span, base);
    relocate_expr(*argument.value, base);
}

void relocate_expr(Expr& expression, const SourcePos& base) {
    relocate_span(expression.span, base);
    if (auto* node = std::get_if<NameExpr>(&expression.data)) {
        if (node->this_qualifier) relocate_span(*node->this_qualifier, base);
    } else if (auto* node = std::get_if<StringTemplateExpr>(&expression.data)) {
        for (auto& child : node->expressions) relocate_expr(*child, base);
    } else if (auto* node = std::get_if<ArrayExpr>(&expression.data)) {
        for (auto& child : node->elements) relocate_expr(*child, base);
    } else if (auto* node = std::get_if<IndexExpr>(&expression.data)) {
        relocate_expr(*node->base, base);
        for (auto& item : node->items) {
            relocate_span(item.span, base);
            if (item.index) relocate_expr(*item.index, base);
            if (item.start) relocate_expr(*item.start, base);
            if (item.stop) relocate_expr(*item.stop, base);
            if (item.step) relocate_expr(*item.step, base);
        }
    } else if (auto* node = std::get_if<MemberExpr>(&expression.data)) {
        relocate_expr(*node->base, base);
    } else if (auto* node = std::get_if<UnaryExpr>(&expression.data)) {
        relocate_expr(*node->operand, base);
    } else if (auto* node = std::get_if<BinaryExpr>(&expression.data)) {
        relocate_expr(*node->left, base);
        relocate_expr(*node->right, base);
    } else if (auto* node = std::get_if<CallExpr>(&expression.data)) {
        for (auto& argument : node->args) relocate_arg(argument, base);
        for (auto& argument : node->type_arguments) relocate_type(argument, base);
    } else if (auto* node = std::get_if<MethodCallExpr>(&expression.data)) {
        relocate_expr(*node->receiver, base);
        for (auto& argument : node->args) relocate_arg(argument, base);
        for (auto& argument : node->type_arguments) relocate_type(argument, base);
    } else if (auto* node = std::get_if<TryExpr>(&expression.data)) {
        relocate_expr(*node->value, base);
    } else if (auto* node = std::get_if<IfExpr>(&expression.data)) {
        for (auto& condition : node->conditions) relocate_expr(*condition, base);
        for (auto& value : node->values) relocate_expr(*value, base);
        relocate_expr(*node->otherwise, base);
    }
}

SourcePos string_content_position(const Token& token, const std::size_t content_offset) {
    SourcePos position = token.span.start;
    ++position.offset;
    ++position.column;
    for (std::size_t i = 0; i < content_offset; ++i) {
        ++position.offset;
        if (token.text[i] == '\n') {
            ++position.line;
            position.column = 1;
        } else {
            ++position.column;
        }
    }
    return position;
}
} // namespace

const Token& Parser::peek(std::size_t n) const { return tokens_.at(std::min(current_ + n, tokens_.size() - 1)); }
const Token& Parser::previous() const { return tokens_.at(current_ - 1); }
bool Parser::at(TokenKind kind) const { return peek().kind == kind; }
bool Parser::match(TokenKind kind) { if (!at(kind)) return false; ++current_; return true; }

const Token& Parser::consume(TokenKind kind, const char* message) {
    if (at(kind)) return tokens_[current_++];
    error(peek(), message);
}

[[noreturn]] void Parser::error(const Token& token, std::string message) const {
    throw CompileError(Diagnostic{"PARSE_ERROR", std::move(message), token.span});
}

void Parser::consume_newlines() { while (match(TokenKind::Newline)) {} }

void Parser::record(const CompileError& error) {
    if (diagnostics_.size() >= max_errors_) {
        throw CompileErrors(diagnostics_, true);
    }
    diagnostics_.push_back(error.diagnostic());
}

void Parser::synchronize_statement() {
    while (!at(TokenKind::Eof) && !at(TokenKind::Newline) && !at(TokenKind::Dedent)) {
        ++current_;
    }
    consume_newlines();
}

void Parser::end_statement(const char* context) {
    if (match(TokenKind::Newline)) { consume_newlines(); return; }
    if (at(TokenKind::Eof) || at(TokenKind::Dedent)) return;
    error(peek(), std::string("Expected newline after ") + context + ".");
}

bool Parser::looks_like_declaration(bool function) const {
    std::size_t i = current_;
    if (!function && i < tokens_.size() && tokens_[i].kind == TokenKind::KwConst) ++i;
    if (!scan_type_lookahead(tokens_, i, 1, max_parse_depth)) return false;
    if (!function && i < tokens_.size() && tokens_[i].kind == TokenKind::Ampersand) ++i;
    if (i >= tokens_.size() || tokens_[i++].kind != TokenKind::Identifier) return false;

    if (function && i < tokens_.size() && tokens_[i].kind == TokenKind::Less) {
        ++i;
        const auto scan_parameter = [&]() {
            if (i >= tokens_.size() || tokens_[i++].kind != TokenKind::Identifier) return false;
            if (i < tokens_.size() && tokens_[i].kind == TokenKind::Colon) {
                ++i;
                if (i >= tokens_.size() || tokens_[i++].kind != TokenKind::Identifier) return false;
            }
            return true;
        };
        if (!scan_parameter()) return false;
        while (i < tokens_.size() && tokens_[i].kind == TokenKind::Comma) {
            ++i;
            if (!scan_parameter()) return false;
        }
        if (i >= tokens_.size() || tokens_[i++].kind != TokenKind::Greater) return false;
    }

    if (i >= tokens_.size()) return false;
    return function ? tokens_[i].kind == TokenKind::LParen : tokens_[i].kind != TokenKind::LParen;
}

bool Parser::looks_like_type_argument_call() const {
    if (!at(TokenKind::Less)) return false;

    std::size_t i = current_ + 1;
    if (!scan_type_lookahead(tokens_, i, 1, max_parse_depth)) return false;
    while (i < tokens_.size() && tokens_[i].kind == TokenKind::Comma) {
        ++i;
        if (!scan_type_lookahead(tokens_, i, 1, max_parse_depth)) return false;
    }
    return i + 1 < tokens_.size() &&
           tokens_[i].kind == TokenKind::Greater &&
           tokens_[i + 1].kind == TokenKind::LParen;
}

bool Parser::looks_like_cli_decl() const {
    return at(TokenKind::Identifier) && peek().text == "cli" &&
           peek(1).kind == TokenKind::Identifier &&
           peek(2).kind == TokenKind::Newline;
}

// `export` is contextual: it starts an export prefix only when a string
// literal follows it, so `export` stays an ordinary identifier elsewhere.
bool Parser::looks_like_export_prefix() const {
    return at(TokenKind::Identifier) && peek().text == "export" &&
           peek(1).kind == TokenKind::String;
}

Program Parser::parse() {
    Program p;
    consume_newlines();
    while (!at(TokenKind::Eof)) {
        try {
            if (at(TokenKind::KwImport)) p.imports.push_back(import_decl());
            else if (at(TokenKind::KwPublic)) {
                consume(TokenKind::KwPublic, "Expected public.");
                if (!at(TokenKind::KwImport)) error(peek(), "public is only valid as 'public import'.");
                auto declaration = import_decl();
                declaration.is_public = true;
                p.imports.push_back(std::move(declaration));
            }
            else if (at(TokenKind::Identifier) && peek().text == "extern") p.functions.push_back(external_function_decl());
            else if (looks_like_export_prefix()) p.functions.push_back(export_function_decl());
            else if (looks_like_cli_decl()) cli_decl(p);
            else if (at(TokenKind::KwEnum)) p.enums.push_back(enum_decl());
            else if (at(TokenKind::KwClass)) p.classes.push_back(class_decl());
            else if (looks_like_declaration(true)) p.functions.push_back(function_decl());
            else if (at(TokenKind::KwIf) && peek(1).kind == TokenKind::Identifier &&
                     peek(1).text == "main" && peek(2).kind == TokenKind::Newline)
                p.statements.push_back(main_guard_stmt());
            else p.statements.push_back(statement());
        } catch (const CompileError& error) {
            record(error);
            synchronize_statement();
        }
        consume_newlines();
    }
    if (!diagnostics_.empty()) throw CompileErrors(std::move(diagnostics_));
    return p;
}

TypeName Parser::type_name() {
    ParseDepthGuard depth(type_depth_, max_parse_depth, peek(), "Type");
    TypeName t;
    const auto first = consume(TokenKind::Identifier, "Expected an explicit type.");
    t.name = first.text;
    t.span = first.span;

    while (match(TokenKind::Dot)) {
        const auto part = consume(TokenKind::Identifier, "Expected type name after '.'.");
        t.name += "." + part.text;
        t.span.end = part.span.end;
    }

    const auto parse_shape_pattern = [&]() {
        consume(TokenKind::Less, "Expected '<' before shape pattern.");
        if (at(TokenKind::Greater)) error(peek(), "Shape pattern requires at least one axis.");
        while (true) {
            if (at(TokenKind::Identifier) && peek().text == "_" &&
                (peek(1).kind == TokenKind::Comma || peek(1).kind == TokenKind::Greater)) {
                consume(TokenKind::Identifier, "Expected '_'.");
                t.tensor_shape_prefix.push_back(-1);
                t.tensor_shape_expressions.push_back(nullptr);
            } else {
                auto parsed = type_integer_expression();
                long long static_extent = -2;
                if (const auto* literal = std::get_if<IntegerExpr>(&parsed->data)) {
                    if (literal->value >
                        static_cast<unsigned long long>(std::numeric_limits<long long>::max())) {
                        error(previous(), "Shape extent is too large.");
                    }
                    static_extent = static_cast<long long>(literal->value);
                }
                t.tensor_shape_prefix.push_back(static_extent);
                t.tensor_shape_expressions.emplace_back(parsed.release());
            }
            if (!match(TokenKind::Comma)) break;
            if (at(TokenKind::Greater)) error(peek(), "Trailing comma is not allowed in a shape pattern.");
        }
        consume(TokenKind::Greater, "Expected '>' after shape pattern.");
        t.tensor_rank = static_cast<long long>(t.tensor_shape_prefix.size());
        t.span.end = previous().span.end;
    };

    if (t.name == "fn") {
        consume(TokenKind::Less, "fn requires '<Result>' before its parameter list.");
        if (at(TokenKind::Greater)) error(peek(), "fn requires a result type.");
        t.arguments.push_back(type_name());
        consume(TokenKind::Greater, "Expected '>' after fn result type.");
        consume(TokenKind::LParen, "Expected '(' after fn result type.");
        if (!at(TokenKind::RParen)) {
            do {
                t.function_parameters.push_back(type_name());
            } while (match(TokenKind::Comma));
        }
        t.span.end = consume(TokenKind::RParen, "Expected ')' after fn parameter types.").span.end;
    } else if (at(TokenKind::Less)) {
        if (t.name == "tensor") {
            consume(TokenKind::Less, "Expected '<' before tensor element type.");
            if (at(TokenKind::Greater)) error(peek(), "tensor requires an element type.");
            t.arguments.push_back(type_name());
            consume(TokenKind::Greater, "Expected '>' after tensor element type.");
            t.span.end = previous().span.end;
            if (at(TokenKind::Less)) parse_shape_pattern();
        } else {
            t.arguments = type_argument_list();
            t.span.end = previous().span.end;
        }
    }
    while (match(TokenKind::LBracket)) {
        long long length = -1;
        std::shared_ptr<Expr> dimension;
        if (!at(TokenKind::RBracket)) {
            auto parsed = type_integer_expression();
            length = -2;
            if (const auto* literal = std::get_if<IntegerExpr>(&parsed->data)) {
                if (literal->value >
                    static_cast<unsigned long long>(std::numeric_limits<long long>::max())) {
                    error(previous(), "Array dimension is too large.");
                }
                length = static_cast<long long>(literal->value);
            }
            dimension.reset(parsed.release());
        }
        t.span.end = consume(TokenKind::RBracket, "Expected ']' after array dimension.").span.end;
        t.dimensions.push_back(length);
        t.dimension_expressions.push_back(std::move(dimension));
        ++t.array_depth;
    }

    if (match(TokenKind::Pipe)) {
        TypeName u;
        u.name = "union";
        u.span.start = t.span.start;
        u.arguments.push_back(std::move(t));
        u.arguments.push_back(type_name());
        u.span.end = u.arguments.back().span.end;
        return u;
    }
    return t;
}

ExprPtr Parser::type_integer_factor() {
    if (match(TokenKind::Plus)) return type_integer_factor();

    if (match(TokenKind::Minus)) {
        const auto op = previous();
        auto operand = type_integer_factor();
        auto result = std::make_unique<Expr>();
        result->span = SourceSpan{op.span.start, operand->span.end};
        result->data = UnaryExpr{"-", std::move(operand)};
        return result;
    }

    if (match(TokenKind::Integer)) {
        const auto token = previous();
        std::uint64_t value{};
        const auto parsed =
            std::from_chars(token.text.data(), token.text.data() + token.text.size(), value);
        if (parsed.ec != std::errc{} ||
            parsed.ptr != token.text.data() + token.text.size()) {
            error(token, "Integer extent is too large.");
        }
        auto result = std::make_unique<Expr>();
        result->span = token.span;
        result->data = IntegerExpr{value, std::to_string(value), true};
        return result;
    }

    if (at(TokenKind::KwThis)) return this_field();

    if (match(TokenKind::Identifier)) {
        const auto token = previous();
        if (token.text == "_") {
            error(token, "'_' is only valid as a tensor wildcard axis.");
        }
        auto result = std::make_unique<Expr>();
        result->span = token.span;
        result->data = NameExpr{token.text};
        return result;
    }

    if (match(TokenKind::LParen)) {
        const auto start = previous().span.start;
        auto result = type_integer_expression();
        const auto end = consume(TokenKind::RParen, "Expected ')' after integer extent expression.").span.end;
        result->span = SourceSpan{start, end};
        return result;
    }

    error(peek(), "Expected an integer extent expression.");
}

ExprPtr Parser::type_integer_term() {
    auto left = type_integer_factor();
    while (at(TokenKind::Star) || at(TokenKind::Slash) || at(TokenKind::Percent)) {
        const auto op = tokens_[current_++];
        auto right = type_integer_factor();
        left = make_binary(std::move(left), op, std::move(right));
    }
    return left;
}

ExprPtr Parser::type_integer_expression() {
    auto left = type_integer_term();
    while (at(TokenKind::Plus) || at(TokenKind::Minus)) {
        const auto op = tokens_[current_++];
        auto right = type_integer_term();
        left = make_binary(std::move(left), op, std::move(right));
    }
    return left;
}


std::vector<TypeName> Parser::type_argument_list() {
    consume(TokenKind::Less, "Expected '<' before type arguments.");
    std::vector<TypeName> arguments;
    if (at(TokenKind::Greater)) error(peek(), "Generic type argument list cannot be empty.");
    do {
        arguments.push_back(type_name());
    } while (match(TokenKind::Comma));
    consume(TokenKind::Greater, "Expected '>' after type arguments.");
    return arguments;
}

std::vector<std::string> Parser::type_parameter_list(std::vector<std::string>* constraints) {
    if (!match(TokenKind::Less)) return {};
    std::vector<std::string> parameters;
    std::vector<std::string> parsed_constraints;
    if (at(TokenKind::Greater)) error(peek(), "Generic type parameter list cannot be empty.");
    do {
        parameters.push_back(
            consume(TokenKind::Identifier, "Expected generic type parameter name.").text);
        std::string constraint;
        if (match(TokenKind::Colon)) {
            constraint =
                consume(TokenKind::Identifier, "Expected generic constraint name after ':'.").text;
        }
        parsed_constraints.push_back(std::move(constraint));
    } while (match(TokenKind::Comma));
    consume(TokenKind::Greater, "Expected '>' after generic type parameters.");
    if (constraints) *constraints = std::move(parsed_constraints);
    return parameters;
}

ImportDecl Parser::import_decl() {
    const auto start = consume(TokenKind::KwImport, "Expected import.").span.start;
    const auto first = consume(TokenKind::Identifier, "Expected module name or import alias.");

    ImportDecl result;
    result.alias = first.text;
    result.target = first.text;
    result.local_path = false;
    result.span.start = start;
    result.span.end = first.span.end;
